Doing the same for getReviewsByUser